--- a/funny/index.html
+++ b/funny/index.html
@@ -85,7 +85,7 @@
 <body>
     <div class="monospace" id="html"></div>
 
-    <script src="./script.js"></script>
+    <script src="./funny/script.js"></script>
 
     <!-- all of my code before i put it into javascript and i'm too scared to delete it
     <div id="monospace">
